fixing css for avatar and then its done. There are aligned to the left we hav eto align them in the center both of them

--- a/srcs/requirements/front-end/vanilla/css/HostAvatar.css
+++ b/srcs/requirements/front-end/vanilla/css/HostAvatar.css
@@ -7,15 +7,15 @@
 .host-container {
     display: flex;
     align-items: center;
-    gap: 10px;
     background-color: var(--bs-dark);
     color: var(--bs-light);
     padding: 0.5rem;
     border-radius: 0.25rem;
-    margin: 0.5rem 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.avatar {
+.host-avatar {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -23,7 +23,7 @@
     background-position: center;
 }
 
-.name {
+.host-name {
     font-size: 1rem;
     font-weight: bold;
 }
